<resources>
    <string name="app_name">No Nut November</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="snow_days">Nut Days</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="set_last_snow_date">Set Last Nut Date</string>
    <string name="day_since_last_snow">Days Since Last Nut</string>
    <string name="average_snow_cycle">Average Nut Cycle</string>
    <string name="last_snow_date">Last Nut Date</string>
    <string name="warning">If You Jerk Now</string>
    <string name="progress_text">Way to the master</string>
    <string name="init_max_streak">Init Max Streak</string>


</resources>