<?xml version="1.0" encoding="utf-8"?>


<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".SettingsActivity">-->

<!--</android.support.constraint.ConstraintLayout>-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snow_days"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_start_date"
        android:layout_below="@id/button1"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_last_snow_date"
        android:layout_below="@id/button2"/>

    <Button
        android:id="@+id/button_init_max_streak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_max_streak"
        android:layout_below="@id/button3"/>



</RelativeLayout>