<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nnn_head"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_img" />
    </LinearLayout>

    <TextView
        android:id="@+id/daySinceLastSnow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLinearLayout"
        android:layout_marginTop="1dp"
        android:background="@drawable/textview_box"
        android:padding="20dp"
        android:text="@string/day_since_last_snow"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/averageSnowCycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/daySinceLastSnow"
        android:layout_marginTop="5dp"
        android:background="@drawable/textview_box"
        android:padding="20dp"
        android:text="@string/average_snow_cycle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lastSnowDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/averageSnowCycle"
        android:layout_marginTop="5dp"
        android:background="@drawable/textview_box"
        android:padding="20dp"
        android:text="@string/last_snow_date"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastSnowDate"
        android:layout_marginTop="5dp"
        android:background="@drawable/textview_box2"
        android:padding="20dp"
        android:text="@string/warning"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/progressLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warning"
        android:orientation="vertical">

        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_box3"
            android:padding="10dp"
            android:text="@string/progress_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:background="@drawable/textview_box3"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/progressText"
            android:indeterminate="false"
            android:max="100"
            android:progress="40"
            android:minHeight="30dp"
            android:progressDrawable="@drawable/my_progress_bar" />

    </LinearLayout>

<!--    <CalendarView-->
<!--        android:id="@+id/calendar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/lastSnowDate"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:background="@color/white"/>-->

</RelativeLayout>
